Overlapping Fixes

--- a/src/scss/component/_footer.scss
+++ b/src/scss/component/_footer.scss
@@ -268,8 +268,8 @@
 }
 
 .footer-bottom {
-    position: relative;
-    z-index: 5;
+    // position: relative;
+    // z-index: 5;
 
     .inner-bottom {
         padding: 32px 0px;
