--- a/src/scss/component/_pop-up.scss
+++ b/src/scss/component/_pop-up.scss
@@ -1818,7 +1818,7 @@
     display: none;
     padding: 21px 0px 12px;
     position: fixed;
-    z-index: 200;
+    z-index: 4;
     bottom: 0;
     right: 0;
     left: 0;
